--- a/htg/htg.html
+++ b/htg/htg.html
@@ -17,7 +17,7 @@
 <body>
     <div>
         <a href="../../index.html" class="kembali">
-            <img src="../../assets/img/back.png">
+            <img src="../assets/img/back.png">
         </a>
 
         <a href="htg.html" class="judul animate__animated animate__pulse animate__repeat-3">
@@ -25,7 +25,7 @@
         </a>
 
         <a href="htg2.html" class="lanjut">
-            <img src="../../assets/img/lanjut.png">
+            <img src="../assets/img/lanjut.png">
         </a>
     </div>
     <div class="angka">
