--- a/htg/htg.html
+++ b/htg/htg.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div>
-        <a href="../../index.html" class="kembali">
+        <a href="../index.html" class="kembali">
             <img src="../assets/img/back.png">
         </a>
 
