--- a/htg/htg2.html
+++ b/htg/htg2.html
@@ -17,15 +17,15 @@
 <body >
     <div>
         <a href="htg.html" class="kembali">
-            <img src="../../assets/img/back.png">
+            <img src="../assets/img/back.png">
         </a>
 
         <a class="judul animate__animated animate__pulse animate__repeat-3">
             <img src="img/judul.png">
         </a>
 
-        <a href="../../index.html" class="selesai">
-            <img src="../../assets/img/selesai.png">
+        <a href="../index.html" class="selesai">
+            <img src="../assets/img/selesai.png">
         </a>
     </div>
     <div class="angka">
