--- a/tbk/tbk.html
+++ b/tbk/tbk.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 
-    <a href="../../index.html" class="kembali">
-        <img src="../../assets/img/back.png">
+    <a href="../index.html" class="kembali">
+        <img src="../assets/img/back.png">
     </a>
 
     <a href="tbk.html" class="judul animate__animated animate__pulse animate__repeat-3">
