--- a/htg/htg2.html
+++ b/htg/htg2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="htg.css">
-    <title>MARI BERHITUNG! PAGE-2</title>
+    <title>MARI BERHITUNG! — PAGE 2</title>
 
     <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
