--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <body>
     <main>
         <div id="tombol">
-                <a href="htg/htg.html" class="animate__animated animate__heartBeat animate__repeat-3" >
+                <a href="htg/htg.html" class="animate__animated animate__pulse animate__repeat-3" >
                     <button class="hitung">
                         <img class="logo1" src="assets/img/htg.png">
                         <label class="hitunglbl">BERHITUNG</label>
                     </button>
                 </a>
-                <a href="tbk/tbk.html" class="animate__animated animate__heartBeat animate__repeat-3" >
+                <a href="tbk/tbk.html" class="animate__animated animate__pulse animate__repeat-3" >
                     <button href="tbk/tbk.html"  class="tbk">
                         <img class="logo3" src="assets/img/green bird.png">
                         <label class="tbklbl">TEBAK GAMBAR</label>
                     </button>
                 </a>
-                <a href="alpha/page1/alpha.html" class="animate__animated animate__heartBeat animate__repeat-3" >
+                <a href="alpha/page1/alpha.html" class="animate__animated animate__pulse animate__repeat-3" >
                     <button class="abc">
                         <img class="logo2" src="assets/img/abc.png">
                         <label class="abclbl">ALPHABET</label>
